# validahub-new

./: .bandit  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  API_AUDIT.md  BACKLOG.md  Makefile  PRAGMATIC_REFACTORING_PLAN.md  PROJECT_STRUCTURE.md  README.md  TECHNICAL_DEBT.md  corrected_ml.csv  corrected_shopee.csv  csv-valido-mercado-livre.csv  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  test_shopee.csv  test_simple.csv  test_validation.csv  teste-corrigido.csv  teste-mercado-livre.csv  teste-mercado-livre_corrigido.csv  teste-valido.csv  tsconfig.base.json  turbo.json  vercel.json
apps/api/: .coverage  .env  .env.example  .mutmut.yml  BACKLOG.md  IMPROVEMENTS.md  JOBS_README.md  README.md  alembic.ini  coverage.xml  fix_remaining_imports.py  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_real_csv_validation.py  test_trim_correction_isolated.py
apps/api/.github/workflows/: diff-cover.yml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_data.py  002_add_telemetry_events_table.py  003_add_multi_tenant_tables.py  0af1331f1df2_add_jobs_and_job_results_tables.py  734c925959ed_add_jobs_and_job_items_tables.py
apps/api/config/: queue_config.yaml
apps/api/docs/: ADAPTER_PATTERN.md  ARCHITECTURE_IMPROVEMENTS.md  JOB_SYSTEM.md  LEARNING.md
apps/api/examples/: api_usage.md
apps/api/rulesets/base/: rules.yml
apps/api/schemas/: policy-schema.json
apps/api/schemas/events/: job_completed-v1.json  job_failed-v1.json  job_retrying-v1.json  job_started-v1.json
apps/api/scripts/: check-diff-coverage.sh  check_deps.py  seed.py  telemetry_maintenance.py  validate-policies.py
apps/api/src/: config.py  exceptions.py  main.py  test_settings.py
apps/api/src/api/: validate.py
apps/api/src/config/: queue_config.py
apps/api/src/core/: config.py  config_adapter.py  constants.py  enums.py  logging_config.py  result.py  settings.py  utils.py
apps/api/src/db/: base.py  database.py  session.py
apps/api/src/infrastructure/: dataframe_utils.py  dependencies.py  logging_config.py  pipeline_dependencies.py  queue_factory.py  queue_publisher.py
apps/api/src/middleware/: __init__.py  auth.py  authentication_middleware.py  correlation.py  correlation_middleware.py  rate_limit_middleware.py  security_headers_middleware.py  telemetry_middleware.py
apps/api/src/models/: __init__.py  api_key.py  base.py  file.py  job.py  tenant.py  user.py  utils.py  validation_result.py
apps/api/src/routers/: auth.py  jobs.py
apps/api/src/rules/: __init__.py  registry.py
apps/api/src/schemas/: errors.py  job.py  validate.py
apps/api/src/scripts/: seed.py
apps/api/src/services/: __init__.py  auth_service.py  corrector.py  corrector_v2.py  csv_validation_service.py  job_cancellation_service.py  job_creation_service.py  job_idempotency_service.py  job_query_service.py  job_service.py  job_service_adapter.py  job_service_refactored.py  job_status_sync_service.py  policy_loader.py  policy_rule_engine.py  report_generator_service.py  rule_engine_service.py  rule_engine_service_adapter.py  rule_engine_service_refactored.py  validator.py  (+2 more)
apps/api/tests/: conftest.py  test_pipelines.py  test_validate.py
apps/api/tests-integration/: hypothesis_settings.py  strategies.py  test_ruleset_loading.py
(+444 files in other folders)
